# ssh_client

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: main.yml
configuration/pub_key/: id_rsa.pub
src/: cli.rs  lib.rs  main.rs  ssh_client.rs
tests/: cli.rs  ssh_client.rs
tests/config/private_key/: id_rsa
