[package]
name = "ssh_client"
version = "0.1.0"
authors = ["angelocat <catalaniangelo@gmail.com>"]
edition = "2018"


[[bin]]
name = "ssh_client"
path = "src/main.rs"

[lib]
name = "ssh_client"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.43"
env_logger = "0.9.0"
indicatif = "0.16.2"
log = "0.4.14"
rpassword = "5.0"
ssh2 = "0.9"
structopt = "0.3.21"

[dev-dependencies]
assert_cmd = "2.0.0"
predicates = "2.0.2"
tempfile = "3.2.0"
