[package]
name = "ssh_client"
version = "0.1.0"
authors = ["angelocat <catalaniangelo@gmail.com>"]
edition = "2018"


[[bin]]
name = "ssh_client"
path = "src/main.rs"

[lib]
name = "ssh_client"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.43"
exitcode = "1.1.2"
indicatif = "0.16.2"
ssh2 = "0.9"
structopt = "0.3.21"

[dev-dependencies]
assert_cmd = "2.0.0"
predicates = "2.0.2"
